--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,5 +20,8 @@ android {
 }
 
 dependencies {
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.3'
+    compile group: 'javax.annotation', name: 'jsr250-api', version:'1.0'
+
     compile fileTree(dir: 'libs', include: ['*.jar'])
 }
