Sound indexation for news file. Init

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,16 +7,15 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity
-            android:name=".EntryActivity"
-            android:label="@string/app_name" >
+        <!--activity android:name=".MainActivity" android:label="@string/app_name">
+        <activity android:name=".ormlite.HelloAndroidOracleJdbc" android:label="@string/app_name"-->
+        <activity android:name=".EntryPoint" android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-		<!--receiver android:name=".EntryActivity.MyBroadcastReceiver">
+		<!--receiver android:name=".EntryPoint.VolumeBroadcastReceiver">
             <intent-filter>
                 <action android:name="android.media.VOLUME_CHANGED_ACTION" >
                 </action>
@@ -24,4 +23,5 @@
         </receiver-->
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 </manifest>
