--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,14 +3,14 @@ task startApp(type: Exec, dependsOn: 'installDebug') {
     //commandLine 'adb', 'shell', 'am', 'start', '-n', 'com.soundbrowser/.EntryActivity'
 
     // windows
-    commandLine 'cmd', '/c', 'adb', 'shell', 'am', 'start', '-n', 'com.soundbrowser/.EntryActivity'
+    commandLine 'cmd', '/c', 'adb', 'shell', 'am', 'start', '-n', 'com.soundbrowser/.EntryPoint'
 }
 
 apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 21
-    buildToolsVersion "21.0.2"
+    buildToolsVersion '21.0.2'
 
     defaultConfig {
         applicationId "com.soundbrowser"
@@ -25,11 +25,36 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    packagingOptions {
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/license.txt'
+		exclude 'META-INF/ASL2.0'
+		exclude 'META-INF/LICENSE'
+		exclude 'META-INF/NOTICE'
+    }
+}
+
+repositories {
+    flatDir {
+        dirs 'libs'
+    }
 }
 
 dependencies {
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.3'
-    compile group: 'javax.annotation', name: 'jsr250-api', version:'1.0'
-
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.google.code.gson:gson:2.3'
+    compile 'javax.annotation:jsr250-api:1.0'
+    //    compile 'com.j256.ormlite:ormlite-core:4.48'
+    //    compile 'com.j256.ormlite:ormlite-android:4.48'
+    compile 'com.j256.ormlite:ormlite-core:4.43'
+    compile 'org.springframework.android:spring-android-rest-template:1.0.1.RELEASE'
+	compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.13'
+    compile 'com.j256.ormlite:ormlite-android:4.43'
+    compile 'com.j256.ormlite:ormlite-jdbc:4.43'
+    compile 'org.xerial:sqlite-jdbc:3.8.7'
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile(name: 'swipelistview-1.0-20140303.203142-1', ext: 'aar')
+    /* compile ('com.fortysevendeg.swipelistview:swipelistview:1.0-SNAPSHOT@aar') {
+                    transitive = true
+                 }*/
+    compile files('libs/ojdbc14-1.0.jar')
 }
