--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
         android:minSdkVersion="7"
         android:targetSdkVersion="17" />
 
-	<application
+	<application android:name="com.soundbrowser.controller.AppController"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -21,6 +21,8 @@
             android:configChanges="keyboardHidden|orientation"
             android:name=".activities.AndroidTabAndListView"
             android:label="@string/app_name" >
+			<!--meta-data android:name="android.app.searchable"
+					   android:resource="@xml/searchable" /-->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -32,6 +34,12 @@
 		<!-- Outbox Activity -->
         <activity android:name=".activities.OutboxActivity" />
 
+		<!--activity android:name=".activities.SearchResultsActivity">
+			<intent-filter>
+				<action android:name="android.intent.action.SEARCH" />
+			</intent-filter>
+		</activity-->
+		
 		<!--
 			In this example set the Activity to have a split action bar when the device's
 			display is narrow. In ActionBarCompat this is done by setting the
@@ -49,4 +57,5 @@
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<uses-permission android:name="com.android.vending.CHECK_LICENSE" />
 </manifest>
